# incremental-AgDetection

./: .gitignore  README.md
agvision/: README.md  pyproject.toml
agvision/configs/: app.desktop.yaml  app.server.yaml  metrics.defaults.yaml
agvision/core/background/: cancel_token.py  qpool.py
agvision/core/config/: __init__.py  defaults.py  schema.py
agvision/core/datasets/: __init__.py  base.py  classification_folder.py  coco_detection.py  factory.py  masks_segmentation.py  voc_detection.py  yolo_detection.py
agvision/core/eval/: __init__.py  hashing.py  incremental.py  reporter.py  runs.py  store.py
agvision/core/io/: fs.py
agvision/core/metrics/: classification.py  detection.py  segmentation.py
agvision/core/models/: __init__.py  onnx_classifier.py  onnx_segmenter.py  registry.py  simulate.py  tensorrt.py  timm_classifier.py  torchscript.py  yolo.py  yolov8n_seg_onnx.py
agvision/core/registry/: autodetect.py  models.py
agvision/core/runners/: base.py  classifier_runner.py  detector_runner.py  dummy_runner.py  registry.py  segmenter_runner.py
agvision/core/types/: runner_result.py
agvision/core/utils/: resource_monitor.py  timing.py
agvision/docs/: dataset-adapters.md  runner-interface.md  server-architecture.md  ui-architecture.md
agvision/scripts/: convert_yolo_seg_to_masks.py  export_onnx.py  populate_registry.py  scaffold_benchmark.py  verify_inference_parity.py
agvision/server/: app.py
agvision/server/api/: artifacts.py  benchmarks.py  jobs.py  models.py
agvision/tests/: test_ui_smoke.py
agvision/ui/: app.py
(+47 files in other folders)
